; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_socket.c_filt_socktouch.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_socket.c_filt_socktouch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.knote = type { i32, i32, i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__* }
%struct.TYPE_3__ = type { i64 }
%struct.kevent_internal_s = type { i32, i32 }
%struct.socket = type { i32 }

@EVFILT_SOCK_LEVEL_TRIGGER_MASK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.knote*, %struct.kevent_internal_s*)* @filt_socktouch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @filt_socktouch(%struct.knote* %0, %struct.kevent_internal_s* %1) #0 {
  %3 = alloca %struct.knote*, align 8
  %4 = alloca %struct.kevent_internal_s*, align 8
  %5 = alloca %struct.socket*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.knote* %0, %struct.knote** %3, align 8
  store %struct.kevent_internal_s* %1, %struct.kevent_internal_s** %4, align 8
  %8 = load %struct.knote*, %struct.knote** %3, align 8
  %9 = getelementptr inbounds %struct.knote, %struct.knote* %8, i32 0, i32 3
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = inttoptr i64 %14 to %struct.socket*
  store %struct.socket* %15, %struct.socket** %5, align 8
  %16 = load %struct.socket*, %struct.socket** %5, align 8
  %17 = call i32 @socket_lock(%struct.socket* %16, i32 1)
  %18 = load %struct.knote*, %struct.knote** %3, align 8
  %19 = getelementptr inbounds %struct.knote, %struct.knote* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = load %struct.knote*, %struct.knote** %3, align 8
  %22 = getelementptr inbounds %struct.knote, %struct.knote* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = xor i32 %20, %23
  store i32 %24, i32* %6, align 4
  %25 = load %struct.kevent_internal_s*, %struct.kevent_internal_s** %4, align 8
  %26 = getelementptr inbounds %struct.kevent_internal_s, %struct.kevent_internal_s* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 4
  %28 = load %struct.knote*, %struct.knote** %3, align 8
  %29 = getelementptr inbounds %struct.knote, %struct.knote* %28, i32 0, i32 0
  store i32 %27, i32* %29, align 8
  %30 = load %struct.kevent_internal_s*, %struct.kevent_internal_s** %4, align 8
  %31 = getelementptr inbounds %struct.kevent_internal_s, %struct.kevent_internal_s* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 4
  %33 = load %struct.knote*, %struct.knote** %3, align 8
  %34 = getelementptr inbounds %struct.knote, %struct.knote* %33, i32 0, i32 2
  store i32 %32, i32* %34, align 8
  %35 = load i32, i32* %6, align 4
  %36 = load i32, i32* @EVFILT_SOCK_LEVEL_TRIGGER_MASK, align 4
  %37 = and i32 %35, %36
  %38 = xor i32 %37, -1
  %39 = load %struct.knote*, %struct.knote** %3, align 8
  %40 = getelementptr inbounds %struct.knote, %struct.knote* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = and i32 %41, %38
  store i32 %42, i32* %40, align 4
  %43 = load %struct.knote*, %struct.knote** %3, align 8
  %44 = load %struct.socket*, %struct.socket** %5, align 8
  %45 = call i32 @filt_sockev_common(%struct.knote* %43, %struct.socket* %44, i32 0)
  store i32 %45, i32* %7, align 4
  %46 = load %struct.socket*, %struct.socket** %5, align 8
  %47 = call i32 @socket_unlock(%struct.socket* %46, i32 1)
  %48 = load i32, i32* %7, align 4
  ret i32 %48
}

declare dso_local i32 @socket_lock(%struct.socket*, i32) #1

declare dso_local i32 @filt_sockev_common(%struct.knote*, %struct.socket*, i32) #1

declare dso_local i32 @socket_unlock(%struct.socket*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
